# src/routes/post.js
@@ -6,7 +6,7 @@ import {
   deletePost,
   likePost
 } from '../controllers/post.js'
-import { createComment } from '../controllers/comment.js'
+import { createComment, getAllComments } from '../controllers/comment.js'
 import { validateAuthentication, validateIdOrRole } from '../middleware/auth.js'
 
 const router = Router()
@@ -17,5 +17,6 @@ router.post('/:id/comments', validateAuthentication, createComment)
 router.post('/:id/like', validateAuthentication, likePost)
 router.get('/:id', validateAuthentication, getById)
 router.delete('/:id', validateAuthentication, validateIdOrRole, deletePost)
+router.get('/:id/comments', validateAuthentication, getAllComments)
 
 export default router
